force-app/main/default/objects/Opportunity/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>IF(NOT(ISBLANK(Contract_End_Date_Override__c)), 
   Contract_End_Date_Override__c, 
   ADDMONTHS(Contract_Start_Date__c, Term_Length_Months__c) - 1)</formula>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>