force-app/main/default/objects/Opportunity/fields/Contract_End_Date_Override__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_Override__c</fullName>
    <description>Actual contract end date synced from approved quote. Used to override calculated end date.</description>
    <inlineHelpText>This field is populated automatically when a quote syncs back to the opportunity.</inlineHelpText>
    <label>Contract End Date Override</label>
    <type>Date</type>
</CustomField>