force-app/main/default/objects/Opportunity/fields/Invoicing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Instructions__c</fullName>
    <label>Invoicing Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>