force-app/main/default/objects/Opportunity/fields/Synced_Quote__c.field-meta.xml
<CustomField>
    <fullName>Synced_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Quote that is currently synced to this Opportunity. This field is automatically populated when a quote syncs back to the opportunity.</description>
    <inlineHelpText>This field shows which quote is currently synced to this opportunity. Only one quote per opportunity can be synced at a time.</inlineHelpText>
    <label>Synced Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Synced Opportunities</relationshipLabel>
    <relationshipName>Synced_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>