force-app/main/default/objects/Opportunity/recordTypes/Academic_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Academic_Opportunity</fullName>
    <active>true</active>
    <businessProcess>AcademicProcess</businessProcess>
    <label>Academic Opportunity</label>
</RecordType>