force-app/main/default/objects/Opportunity/recordTypes/Existing_Customer_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Existing_Customer_Opportunity</fullName>
    <active>true</active>
    <businessProcess>ExistingCustomerOppProcess</businessProcess>
    <label>Existing Customer Opportunity</label>
</RecordType>