force-app/main/default/objects/Opportunity/recordTypes/Proof_of_Concept.recordType-meta.xml
<RecordType>
    <fullName>Proof_of_Concept</fullName>
    <active>true</active>
    <businessProcess>POCprocess</businessProcess>
    <label>New Sales Opportunity with POC</label>
</RecordType>